<resources>
    <string name="app_name">ShelfBee</string>
    <string name="placeHolderName">Place Holder</string>
    <string name="detailsBuy">BUY</string>
    <string name="setting">Settings</string>
    <string name="search">Search</string>
    <string name="searchHint">Search books by Name</string>
    <string name="facebook_app_id">1653383558302081</string>
    <string name="speech_prompt">Say the book name</string>
    <string name="speech_not_supported">Sorry! Your device doesnot support speech input</string>
    <string name="ImageDescriptionError">Error</string>
    <string name="ImageDescriptionBackground">Background</string>
    <string name="grantpermission">Grant Permission</string>
    <string name="singin">Signed In</string>
    <string name="singinBanned">Your account has been banned for spamming</string>
    <string name="myNrs">NRS DEVS</string>
    <string name="myName">theGoodGuy</string>
    <string name="myPassword">Password</string>
    <string name="myPasswordSubmit">Submit</string>
    <string name="myLoading">Just a sec…</string>
    <string name="rupeeSymbol" translatable="false">र</string>
    <string name="adWordAppId" translatable="false">ca-app-pub-5579030690922565~8562171532</string>
    <string name="adWordAdId" translatable="false">ca-app-pub-5579030690922565/1038904732</string>


    <!-- IntroText-->
    <string name="introSignin">Sign In</string>
    <string name="introExtraDetails">Just few more Details</string>
    <string name="introTermsHeading">By continuing  you  agree to all the <a href='https://docs.google.com/document/d/1a67czBVEUSpL0u8DCByhEbEG1cTVyB8mvC9eLo3Jt6M/pub'> Terms and Conditions</a></string>
    <string name="introLocate">Let us locate you</string>
    <string name="introPermission">We need the permissions to locate you and access your external storage</string>
    <!-- -->

    <!-- AccoountText-->
    <string name="accoutName">Name</string>
    <string name="accoutPurchase">My Purchases</string>
    <string name="accoutUpload">My Uploads</string>
    <string name="accoutSignOut">Sign Out</string>
    <!-- -->

    <!-- url-->
    <string name="urlServer" translatable="false">http://ec2-35-154-208-1.ap-south-1.compute.amazonaws.com/</string>

    <string name="urlInsert" translatable="false">booktrade/bookInsert.php</string>
    <string name="urlQueryAll" translatable="false">booktrade/bookQueryAll.php</string>
    <string name="urlQueryAvailable" translatable="false">booktrade/bookQueryAvailable.php</string>
    <string name="urlQueryInTransit" translatable="false">booktrade/bookQueryInTransit.php</string>
    <string name="urlSearchQuery" translatable="false">booktrade/bookSearchAll.php</string>
    <string name="urlSearchCatQuery" translatable="false">booktrade/bookSearchCategory.php</string>

    <string name="urlMoveToTransit" translatable="false">booktrade/bookMoveToTransit.php</string>
    <string name="urlMoveToAvailable" translatable="false">booktrade/bookMoveToAvalilable.php</string>
    <string name="urlDeleteSingle" translatable="false">booktrade/bookDeleteSingle.php</string>
    <string name="urlPurchaseAvailable" translatable="false">booktrade/bookAvailableToPurchase.php</string>


    <string name="urlUserUploads" translatable="false">booktrade/bookQueryUserAll.php</string>
    <string name="urlUpdateSingle" translatable="false">booktrade/bookUpdate.php</string>

    <string name="urlUserInsert" translatable="false">booktrade/userInsert.php</string>
    <string name="urlUserUpdate" translatable="false">booktrade/userUpdateValue.php</string>
    <string name="urlUserQuery" translatable="false">booktrade/userQueryAll.php</string>
    <string name="urlUserInsertFkey" translatable="false">booktrade/userUpdateFkey.php</string>
    <string name="urlUserUpdateBan" translatable="false">booktrade/userUpdateBan.php</string>

    <string name="urlTransactionInsert" translatable="false">booktrade/transactionInsert.php</string>
    <string name="urlTransactionQueryYour" translatable="false">booktrade/transactionYourPurchase.php</string>
    <string name="urlTransactionDelete" translatable="false">booktrade/transactionDelete.php</string>
    <string name="urlTransactionCheck" translatable="false">booktrade/transactionCheckForCancel.php</string>

    <string name="urlRequestInsert" translatable="false">booktrade/requestInsert.php</string>
    <string name="urlRequestDelete" translatable="false">booktrade/requestDelete.php</string>
    <string name="urlRequestQuery" translatable="false">booktrade/requestQueryAll.php</string>


    <string name="urlBucetHost" translatable="false">https://s3-ap-northeast-1.amazonaws.com/</string>
    <string name="urlBucketName" translatable="false">nsnikbkimg</string>

    <string name="urlCategoryList" translatable="false">booktrade/categoryQueryAll.php</string>
    <string name="urlCondtnList" translatable="false">booktrade/condtnQueryAll.php</string>

    <string name="urlMineQueryAll" translatable="false">booktrade/mineQueryAll.php</string>
    <!-- -->


    <!-- LuancherShortcuts-->
    <string name="launcherAddBook">Upload Book</string>
    <string name="launcherSearchBook">Search Book</string>
    <string name="launcherError">Error</string>
    <!-- -->

    <!-- Prefrences-->
    <string name="prefCategory1">General</string>
    <string name="prefCategory2">UI</string>
    <string name="prefThemeTitle">Theme</string>
    <string name="prefThemeKey">prefthky</string>
    <string name="prefThemeDefaultValue">Default</string>
    <!-- -->

    <array name="prefThemeEntries">
        <item>Default</item>
        <item>Multi-Color</item>
    </array>

    <array name="prefThemeValues">
        <item>Default</item>
        <item>Multi-Color</item>
    </array>


    <!-- NavigationMenu-->
    <string name="navBookList">Book List</string>
    <string name="navMyCart">My Cart</string>
    <string name="navaccount">Account</string>
    <string name="navSettings">Settings</string>
    <string name="navMore">More</string>
    <string name="navRequest">Request List</string>
    <string name="navfeedback">Send Feedback</string>
    <!-- -->

    <!-- AdMob ad unit IDs -->
    <string name="interstitial_full_screen">ca-app-pub-5579030690922565~8562171532</string>
    <string name="banner_ad_unit_id">ca-app-pub-5579030690922565/1038904732</string>
    <!-- -->


    <!-- addBookFields-->
    <string name="bookName">Name</string>
    <string name="bookPublisher">Publisher</string>
    <string name="bookCp">Original Cost Price</string>
    <string name="bookSp">Selling Price</string>
    <string name="bookEdition">Edition</string>
    <string name="bookDescription">Comment or Notes(if any)</string>
    <string name="bookCondition">Condition</string>
    <string name="bookCateogory">Category</string>
    <!-- -->

    <!-- PurchaseText-->
    <string name="purchaseBuyNow">Buy Now</string>
    <string name="purchaseAddToCart">Add To Cart</string>
    <string name="purchaseCannotBuyYourOwnBook">You cannot buy your own book</string>
    <string name="purchaseCannotModifySoldBooks">You cannot modify a book that has been sold</string>
    <string name="purchaseEdit">Edit</string>
    <string name="purchaseDelete">Delete</string>
    <string name="purchaseDescription">Description</string>
    <string name="purchaseRemoveFromCart">Remove From Cart</string>
    <!-- -->

    <!-- dialogText-->
    <string name="dialogPhone">Phone No</string>
    <string name="dialogAddress">Address</string>
    <string name="dialogSave">Save</string>
    <string name="dialogPrice">Price</string>
    <string name="dialogConvenience">Convenience Fee</string>
    <string name="dialogTotal">Total Price</string>
    <string name="dialogAddRequest">Add book for request</string>
    <string name="dialogYourAddress">Your Address</string>
    <string name="dialogLocationStatus">Status</string>
    <string name="dialogLocationLatitude">Latitude</string>
    <string name="dialogLocationLongitude">Location</string>
    <!-- -->


    <!-- Error-->
    <string name="maxfourimage">You cannot upload more images</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- -->


    <!-- bundleExtra-->
    <string name="bundleBookName">bdnlbknm</string>
    <string name="bundleBookPublisher">bdnlbkpb</string>
    <string name="bundleBookPrice">bdnlbkpr</string>
    <string name="bundleBookSellerUid">bdnbkslky</string>
    <string name="bundleBookBookId">bdbkidky</string>
    <!-- -->

    <!-- -IntentExtraKey-->
    <string name="intenKeyObejct">inkyobj</string>
    <string name="intenSearchKey">insrchky</string>
    <string name="intenfromcart">infrkrky</string>
    <string name="intencateuri">incturky</string>
    <string name="intenupind">inupiky</string>
    <string name="intencateuripos">incturpoky</string>
    <string name="intentImageUrl">intimgurlky</string>
    <string name="intentfromupload">intenfrmupky</string>
    <string name="intentEditObject">inkyedob</string>
    <string name="intentRequestBookName">inrqbknm</string>
    <string name="intentRequestBookPublisher">inrqbkpb</string>
    <string name="intentRequestBookRid">inrqbkrid</string>
    <string name="intentExtraPrefrence">inexpref</string>
    <string name="intentExtraAbout">inexabut</string>
    <string name="intentArrayListUrl">intarlstur</string>
    <string name="intentArrayListPosition">intarlstposi</string>
    <!-- -->

    <!-- prefStrings-->
    <string name="prefAccountIndicator" translatable="false">prefaccountInd</string>
    <string name="prefAccountId" translatable="false">prefaccountid</string>
    <string name="prefAccountName" translatable="false">prefaccountnm</string>
    <string name="prefAccountPhone" translatable="false">prefaccountph</string>
    <string name="prefAccountAddress" translatable="false">prefaccountadr</string>
    <string name="prefFirstOpen" translatable="false">prefFrstOpn</string>
    <string name="prefFirstOpenAddd" translatable="false">prefFrstOpnAdd</string>
    <string name="prefFirebaseToken" translatable="false">prefFbTknky</string>
    <string name="prefLatitude" translatable="false">prefLatiky</string>
    <string name="prefLongitude" translatable="false">prefLongky</string>
    <!-- -->

    <!-- About-->
    <string name="aboutUs" translatable="false">About Us</string>
    <string name="aboutLibraries" translatable="false">3rd Party Libraries Used</string>
    <string name="aboutTerms" translatable="false">Terms and Condition</string>
    <string name="aboutLicense" translatable="false">License Agreement</string>
    <string name="aboutVersion">Version</string>
    <!-- -->

    <!-- Location-->
    <string name="latitude">22.591387</string>
    <string name="longititude">88.341108</string>
    <string name="velloreLatitude">12.971285</string>
    <string name="velloreLongititude">79.160383</string>
    <string name="locationServiceEligible">Hurrah!!! You are eligible to use all our services</string>
    <string name="locationServiceIllEligible">We are sorry your region dose not fall into our coverage zone, we are continuously working hard to expand our coverage zone</string>
    <string name="locationErrorMessage">If your having trouble finding location open your maps app locate yourself and then restart the app again</string>
    <!-- -->
</resources>
