<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navItemMyCart"
            android:icon="@drawable/ic_shopping_cart_black_48dp"
            android:title="@string/navMyCart" />
        <item
            android:id="@+id/navItemAccount"
            android:icon="@drawable/ic_profile_banner_black_48d"
            android:title="@string/navaccount" />
        <item
            android:id="@+id/navItemRequest"
            android:icon="@drawable/ic_add_box_black_48dp"
            android:title="@string/navRequest" />
        <item
            android:id="@+id/navItemSettings"
            android:icon="@drawable/ic_more_white_48dp"
            android:title="@string/navMore" />
    </group>
    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navItemFeedback"
            android:icon="@drawable/ic_feedback_white_48dp"
            android:title="@string/navfeedback" />
    </group>
</menu>