<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   style="@style/verticalLinearLayout"
    tools:context="com.trade.book.booktrade.fragments.dialogfragments.dialogFragmentPurchase">

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/dialogPurchaseHead"
        android:textSize="16sp"
        android:padding="@dimen/eight"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorAccent"
        android:text="@string/app_name"
        android:layout_height="wrap_content" />

   <LinearLayout
       style="@style/horizontalLinearLayout"
       android:padding="@dimen/eight"
       android:layout_height="wrap_content">

       <TextView
           style="@style/purchaseDialog"
           android:text="@string/dialogPrice" />

       <TextView
           style="@style/purchaseDialog"
           android:id="@+id/dialogPurchasePrice" />

   </LinearLayout>

    <LinearLayout
        style="@style/horizontalLinearLayout"
        android:padding="@dimen/eight"
        android:layout_height="wrap_content">

        <TextView
            style="@style/purchaseDialog"
            android:text="@string/dialogConvenience" />

        <TextView
            style="@style/purchaseDialog"
            android:id="@+id/dialogPurchaseExtra" />

    </LinearLayout>

    <LinearLayout
        style="@style/horizontalLinearLayout"
        android:padding="@dimen/eight"
        android:layout_height="wrap_content">

        <TextView
            style="@style/purchaseDialog"
            android:text="@string/dialogTotal" />

        <TextView
            style="@style/purchaseDialog"
            android:id="@+id/dialogPurchaseTotal" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_margin="@dimen/eight"
        android:text="@string/purchaseBuyNow"
        android:theme="@style/buttonClr"
        android:textColor="@color/white"
        android:id="@+id/dialogPurchaseBuy"
        android:layout_height="wrap_content" />

</LinearLayout>
