<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/verticalLinearLayout"
    android:layout_width="250dp"
    android:padding="@dimen/sixteen"
    tools:context="com.trade.book.booktrade.fragments.dialogfragments.dialogFragmentRequest">

    <TextView
        style="@style/addBookText"
        android:layout_width="250dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/dialogAddRequest"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/requestName"
            style="@style/addBookText"
            android:layout_width="250dp"
            android:hint="@string/bookName"
            android:padding="@dimen/eight"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/requestPublisher"
            style="@style/addBookText"
            android:layout_width="250dp"
            android:hint="@string/bookPublisher"
            android:inputType="textMultiLine"
            android:padding="@dimen/eight" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/requestSave"
        style="@style/wrapContent"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/eight"
        android:text="@string/dialogSave"
        android:textColor="@color/white"
        android:theme="@style/buttonClr" />

</LinearLayout>
