<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/verticalLinearLayout"
    tools:context="com.trade.book.booktrade.PrefActivity">

    <include
        android:id="@+id/toolbarPref"
        layout="@layout/toolbar" />


    <LinearLayout
        android:id="@+id/prefContainer"
        style="@style/verticalLinearLayout"
        android:layout_below="@id/toolbarPref"
        android:visibility="gone" />


    <RelativeLayout
        android:id="@+id/aboutContainer"
        style="@style/matchParent"
        android:visibility="visible"
        android:gravity="center"
        android:background="@color/colorBackground"
        android:layout_below="@id/toolbarPref">

        <ScrollView
            style="@style/wrapContent">

        <RelativeLayout
            style="@style/matchParent">


                <LinearLayout
                    android:id="@+id/aboutLogoContainer"
                    style="@style/wrapContent"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:padding="@dimen/sixteen">

                    <ImageView
                        android:id="@+id/aboutImage"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/ImageDescriptionBackground"
                        android:src="@drawable/launcher_logo" />

                    <com.romainpiel.shimmer.ShimmerTextView
                        android:id="@+id/aboutText"
                        style="@style/wrapContent"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/app_name"
                        android:textColor="@color/colorAccent"
                        android:textSize="37sp" />

                    <TextView
                        android:id="@+id/aboutVersion"
                        android:layout_width="match_parent"
                        android:text="@string/aboutVersion"
                        android:gravity="center_horizontal"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="14sp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    style="@style/verticalLinearLayout"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/aboutLogoContainer">

                    <Button
                        style="@style/aboutButtons"
                        android:text="@string/aboutUs"
                        android:id="@+id/aboutButtonDevs" />

                    <Button
                        style="@style/aboutButtons"
                        android:id="@+id/aboutButtonTerms"
                        android:text="@string/aboutTerms" />

                    <Button
                        style="@style/aboutButtons"
                        android:text="@string/aboutLibraries"
                        android:id="@+id/aboutButtonLibraries" />

                </LinearLayout>

        </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>
