<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matchParent"
    android:background="@color/colorBackground"
    tools:context="com.trade.book.booktrade.fragments.introfragments.intro3Fragment">


    <LinearLayout
        android:id="@+id/intro3DetailsConatiner"
        style="@style/wrapContent"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:padding="@dimen/sixteen">

        <LinearLayout
            style="@style/wrapContent"
            android:layout_marginEnd="@dimen/sixteen"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/dialogPhone"
                style="@style/wrapContent"
                android:layout_marginBottom="@dimen/sixteen"
                android:src="@drawable/ic_phone_black_48dp"
                android:tint="@color/colorAccent" />

            <ImageView
                android:contentDescription="@string/dialogAddress"
                style="@style/wrapContent"
                android:src="@drawable/ic_home_black_48dp"
                android:tint="@color/colorAccent" />

        </LinearLayout>


        <LinearLayout
            style="@style/wrapContent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/intro3Phoneno"
                    style="@style/wrapContent"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/sixteen"
                    android:hint="@string/dialogPhone"
                    android:inputType="phone"
                    android:src="@drawable/ic_phone_white_48dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/intro3Address"
                    style="@style/wrapContent"
                    android:layout_width="match_parent"
                    android:hint="@string/dialogAddress"
                    android:src="@drawable/ic_home_white_48dp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/wrapContent"
        android:layout_above="@id/intro3DetailsConatiner"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/sixteen"
        android:fontFamily="sans-serif-light"
        android:text="@string/introExtraDetails"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="28sp" />

</RelativeLayout>
